# rust-hotpatch-elf64

./: .gitignore  .travis.yml  Cargo.toml  README.md
files/c/: Makefile  test1.c
files/c/test1/orig/: Makefile  dummy.c
files/c/test1/patch/: Makefile  bar.c
src/: dwarf.rs  main.rs  ptrace_ext.rs  util.rs  utils.rs
src/lib/: dwarf.rs  elf.rs  mod.rs  ptrace.rs
src/lib/dwarf/: consts.rs  mod.rs  x86_64.rs
src/lib/sys/regs/: mod.rs  x86_64.rs
src/officer/: helper.rs  mod.rs
